Fix Checkbox.Group align issue in Form
close #8739

also fix style prop of Checkbox.Group

--- a/components/checkbox/style/mixin.less
+++ b/components/checkbox/style/mixin.less
@@ -167,6 +167,7 @@
 
   .@{checkbox-prefix-cls}-group {
     .reset-component;
+    display: inline-block;
     &-item {
       display: inline-block;
       margin-right: 8px;
